# blendes_flow

./: .gitignore  LICENSE  compose.yaml
backend/: .coverage  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  exceptions.py  models.py  services.py  urls.py
backend/apps/accounts/common/: throttles.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/authentication/: admin.py  apps.py  exceptions.py  models.py  schema.py  services.py  urls.py
backend/apps/authentication/common/: throttles.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_rename_authentication_user_revoked_expires_idx_user_revoked_expires_idx.py  0003_socialidentity.py
backend/apps/blendes/: apps.py  urls.py
backend/apps/blendes_flow/: apps.py  estructure.md  models.py  urls.py
backend/apps/organizations/: access.py  exceptions.py  models.py  permissions.py  services.py  urls.py
backend/configuration/: asgi.py  environment.py  middleware.py  urls.py  wsgi.py
backend/configuration/settings/: base.py  beta.py  local.py  prod.py  test.py
backend/tests/accounts/: test_api.py  test_units.py
backend/tests/authentication/: __init__.py  factories.py  test_api.py  test_services.py  test_units.py  urls.py
backend/tests/blendes/: factories.py  test_api.py  test_services.py
backend/tests/blendes_flow/: __init__.py  factories.py  test_api.py  test_services.py
backend/tests/organizations/: __init__.py  factories.py  test_api.py  test_services.py  test_units.py
(+150 files in other folders)
