[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "viniciussilvadasilva"}
]
requires-python = ">=3.14, <4"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "google-auth (>=2.55.0,<3.0.0)",
    "requests (>=2.32.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.14.2,<8.0.0)"
]
